살짝고쳤으요

--- a/css/index.css
+++ b/css/index.css
@@ -1735,6 +1735,15 @@ body {
 }
 
 @media (max-width: 1200px) {
+  .sticky-btn {
+    z-index: 15;
+    position: fixed;
+    right: 50px;
+    bottom: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   .sec1 {
     height: 100vh;
     display: flex;
@@ -3135,6 +3144,15 @@ body {
 @media (max-width: 480px) {
   body {
     overflow-x: hidden;
+  }
+  .sticky-btn {
+    z-index: 15;
+    position: fixed;
+    right: 25px;
+    bottom: 90px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
   .sec1 {
     height: 100vh;
